force-app/main/default/objects/Appointments__c/fields/Patients__c.field-meta.xml
<CustomField>
    <fullName>Patients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Patients</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>