force-app/main/default/objects/Appointments__c/fields/Physicians__c.field-meta.xml
<CustomField>
    <fullName>Physicians__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physicians</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Physicians</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments (Physicians)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>