force-app/main/default/objects/Appointments__c/fields/PhysiciansSpecialization__c.field-meta.xml
<CustomField>
    <fullName>PhysiciansSpecialization__c</fullName>
    <formula>Physicians__r.SpecialisationAccount__r.Name</formula>
    <label>Physicians Specialization</label>
    <type>Text</type>
</CustomField>