force-app/main/default/objects/Appointments__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>TEXT(DAY(TODAY()))&amp;&quot; &quot;&amp;CASE(MONTH(TODAY()),1,&quot;January&quot;,2,&quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,&quot;December&quot;)&amp;&quot; &quot;&amp;TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Text</type>
</CustomField>